Clean up * Removed ssh and ssh entry point * Updated readme