@@ -1,60 +1,41 @@
 # Jenkins-slave
 
- A docker image to be used with the Jenkins [docker-plugin](https://wiki.jenkins-ci.org/display/JENKINS/Docker+Plugin)
+ A docker image to be used for Jenkins testing
  
  This image provides
  * Languages
     * JDK 1.7, 1.8 / Maven 3.0.5
     * Node 0.10.24 via nvm
-    * Ruby 1.9.1
+    * Ruby 2.1.2 via RVM
  * Services
     * Postgres 9.3
-    * Open SSH
     * Xvfb
  * Browsers
      * Firefox
      * Chrome
      * Chromium
 
-### Usage
+### Environment Variables
 
-#### SSH
+* `JAVA_OPTS`, Default: `-Xmx2G -Xms2G -XX:PermSize=256M -XX:MaxPermSize=256m`
+* `DISPLAY`, Default `:10`
+* `XVFB_SCREEN_SIZE`, Default `1024x768x24`
 
-By default starts a SSH server accessible by a `jenkins` user with password `jenkins` with following OPTIONS...
+### Examples
 
-```
-USAGE: docker run -d -P [VOLUMES] wmluke/jenkins-slave [OPTIONS]
+> `BUILD_TAG` and `WORKSPACE` are jenkins environment variables.
 
-OPTIONS:
-    --uid                   User ID to assign to the container's `jenkins` user
-    --gid                   Group ID to assign to the container's `jenkins` user
-    --password              Sets the password of the `jenkins` user.  Default password is `jenkins`.
-    --with-postgres true    Start postgres server.  Default is `true`.
-    
-VOLUMES:
-    All volumes mounted under `/home/jenkins` will be `chown`ed to the container's `jenkins` user.
-    
-    To inject SSH keys into the container, specify a host volume:
-    
-        -v /home/jenkins/.ssh:/home/jenkins/.ssh
-        
-    Other helpful volumes:
-    
-        -v /var/lib/jenkins/jobs:/home/jenkins/jobs
-        -v /home/jenkins/.m2:/home/jenkins/.m2
-        -v /home/jenkins/.npm:/home/jenkins/.npm
-        -v /home/jenkins/.bower:/home/jenkins/.bower
-```
-
-#### Custom
-
-Alternatively, you can forgo ssh to run custom commands
+#### MVN Usage
 
 ```
 $ docker run -i --rm --name $BUILD_TAG -v $WORKSPACE:$WORKSPACE --workdir="$WORKSPACE" wmluke/jenkins-slave /bin/bash -c "/etc/init.d/postgresql start && mvn clean install"
 ```
 
-Where `BUILD_TAG` and `WORKSPACE` are jenkins environment variables.
+#### Cucumber Usage
+
+```
+$ docker run -i --rm --name $BUILD_TAG -v $WORKSPACE:$WORKSPACE --workdir="$WORKSPACE" --env XVFB_SCREEN_SIZE=1920x1080x24 wmluke/jenkins-slave /bin/bash -c "/etc/init.d/xvfb start && bundle install && cucumber features/xyz.feature"
+```
 
 #### Utils
 
